[gd_scene load_steps=46 format=2]

[ext_resource path="res://assets/sprites/player/player_placeholder.png" type="Texture" id=1]
[ext_resource path="res://scripts/player/Player.gd" type="Script" id=2]
[ext_resource path="res://assets/sprites/player/Player-Sheet.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/player/Attack-Sheet.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/shadow.png" type="Texture" id=5]

[sub_resource type="CapsuleShape2D" id=50]
height = 12.0

[sub_resource type="CircleShape2D" id=1]
radius = 4.0

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PlayerSprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AttackHitbox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AttackHitbox/AttackSprite:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("AttackHitbox/AttackSprite:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=52]
resource_name = "attack"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("AttackHitbox/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AttackHitbox/AttackSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AttackHitbox/AttackSprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=20]
resource_name = "hurt"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "idle-diag1"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=3]
resource_name = "idle-diag2"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14, 15 ]
}

[sub_resource type="Animation" id=4]
resource_name = "idle-down"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=5]
resource_name = "idle-left"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11 ]
}

[sub_resource type="Animation" id=6]
resource_name = "idle-top"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 18, 19 ]
}

[sub_resource type="Animation" id=32]
resource_name = "run-diag1"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 24, 25, 26, 27 ]
}

[sub_resource type="Animation" id=33]
resource_name = "run-diag2"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 32, 33, 34, 35 ]
}

[sub_resource type="Animation" id=34]
resource_name = "run-down"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 20, 21, 22, 23 ]
}

[sub_resource type="Animation" id=35]
resource_name = "run-left"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 28, 29, 30, 31 ]
}

[sub_resource type="Animation" id=36]
resource_name = "run-top"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 36, 37, 38, 39 ]
}

[sub_resource type="AnimationNodeAnimation" id=53]
animation = "attack"

[sub_resource type="AnimationNodeAnimation" id=21]
animation = "idle-diag1"

[sub_resource type="AnimationNodeAnimation" id=22]
animation = "idle-diag2"

[sub_resource type="AnimationNodeAnimation" id=23]
animation = "idle-diag2"

[sub_resource type="AnimationNodeAnimation" id=24]
animation = "idle-diag1"

[sub_resource type="AnimationNodeAnimation" id=25]
animation = "idle-left"

[sub_resource type="AnimationNodeAnimation" id=26]
animation = "idle-left"

[sub_resource type="AnimationNodeAnimation" id=27]
animation = "idle-down"

[sub_resource type="AnimationNodeAnimation" id=28]
animation = "idle-top"

[sub_resource type="AnimationNodeBlendSpace2D" id=29]
blend_point_0/node = SubResource( 21 )
blend_point_0/pos = Vector2( -1, 1 )
blend_point_1/node = SubResource( 22 )
blend_point_1/pos = Vector2( -1, -1 )
blend_point_2/node = SubResource( 23 )
blend_point_2/pos = Vector2( 1, -1 )
blend_point_3/node = SubResource( 24 )
blend_point_3/pos = Vector2( 1, 1 )
blend_point_4/node = SubResource( 25 )
blend_point_4/pos = Vector2( 1, 0 )
blend_point_5/node = SubResource( 26 )
blend_point_5/pos = Vector2( -1, 0 )
blend_point_6/node = SubResource( 27 )
blend_point_6/pos = Vector2( 0, 1 )
blend_point_7/node = SubResource( 28 )
blend_point_7/pos = Vector2( 0, -1 )
snap = Vector2( 1, 1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=40]
animation = "run-top"

[sub_resource type="AnimationNodeAnimation" id=41]
animation = "run-down"

[sub_resource type="AnimationNodeAnimation" id=42]
animation = "run-left"

[sub_resource type="AnimationNodeAnimation" id=43]
animation = "run-left"

[sub_resource type="AnimationNodeAnimation" id=44]
animation = "run-diag1"

[sub_resource type="AnimationNodeAnimation" id=45]
animation = "run-diag1"

[sub_resource type="AnimationNodeAnimation" id=46]
animation = "run-diag2"

[sub_resource type="AnimationNodeAnimation" id=47]
animation = "run-diag2"

[sub_resource type="AnimationNodeBlendSpace2D" id=37]
blend_point_0/node = SubResource( 40 )
blend_point_0/pos = Vector2( 0, -1 )
blend_point_1/node = SubResource( 41 )
blend_point_1/pos = Vector2( 0, 1 )
blend_point_2/node = SubResource( 42 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 43 )
blend_point_3/pos = Vector2( -1, 0 )
blend_point_4/node = SubResource( 44 )
blend_point_4/pos = Vector2( -1, 1 )
blend_point_5/node = SubResource( 45 )
blend_point_5/pos = Vector2( 1, 1 )
blend_point_6/node = SubResource( 46 )
blend_point_6/pos = Vector2( -1, -1 )
blend_point_7/node = SubResource( 47 )
blend_point_7/pos = Vector2( 1, -1 )
snap = Vector2( 1, 1 )
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id=38]

[sub_resource type="AnimationNodeStateMachineTransition" id=39]

[sub_resource type="AnimationNodeStateMachineTransition" id=54]

[sub_resource type="AnimationNodeStateMachineTransition" id=55]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachine" id=30]
states/attack/node = SubResource( 53 )
states/attack/position = Vector2( 180.111, -70.8889 )
states/idle/node = SubResource( 29 )
states/idle/position = Vector2( 360, 97 )
states/run/node = SubResource( 37 )
states/run/position = Vector2( 552, 97 )
transitions = [ "idle", "run", SubResource( 38 ), "run", "idle", SubResource( 39 ), "idle", "attack", SubResource( 54 ), "attack", "idle", SubResource( 55 ) ]
start_node = "idle"
graph_offset = Vector2( -100, -141 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=31]

[node name="Player" type="KinematicBody2D" groups=["player"]]
collision_layer = 2
script = ExtResource( 2 )

[node name="AttackHitbox" type="Area2D" parent="."]
position = Vector2( 0, -4 )
collision_layer = 0
collision_mask = 4
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackHitbox"]
position = Vector2( 12, 0 )
rotation = 1.5708
shape = SubResource( 50 )
disabled = true

[node name="AttackSprite" type="Sprite" parent="AttackHitbox"]
visible = false
position = Vector2( 12, -1.14441e-05 )
texture = ExtResource( 4 )
hframes = 4
vframes = 2

[node name="PlaceholderSprite" type="Sprite" parent="."]
visible = false
texture = ExtResource( 1 )
offset = Vector2( 0, -10 )

[node name="Shadow" type="Sprite" parent="."]
position = Vector2( 0, -5 )
texture = ExtResource( 5 )

[node name="PlayerSprite" type="Sprite" parent="."]
position = Vector2( 0, -12 )
texture = ExtResource( 3 )
hframes = 20
vframes = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -4 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 7 )
anims/attack = SubResource( 52 )
anims/hurt = SubResource( 20 )
anims/idle-diag1 = SubResource( 2 )
anims/idle-diag2 = SubResource( 3 )
anims/idle-down = SubResource( 4 )
anims/idle-left = SubResource( 5 )
anims/idle-top = SubResource( 6 )
anims/run-diag1 = SubResource( 32 )
anims/run-diag2 = SubResource( 33 )
anims/run-down = SubResource( 34 )
anims/run-left = SubResource( 35 )
anims/run-top = SubResource( 36 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 30 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 31 )
parameters/idle/blend_position = Vector2( 0, 1 )
parameters/run/blend_position = Vector2( 0.00158477, 0.181035 )

[node name="DashTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="DamageTimer" type="Timer" parent="."]
one_shot = true

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[connection signal="body_entered" from="AttackHitbox" to="." method="_on_AttackHitbox_body_entered"]
